@@ -1,3 +1,3 @@
-EBUILD wolman-9999.ebuild 792 RMD160 96cc57bee310db1b1909259afa8e7d75498e89c8 SHA1 1f7ea30205b48aaecf0e9257806e374067bf9b47 SHA256 bbe112ef8207e8dcd005140fea0c4f976604d9abcd6d5b26e55772e951780907
-MISC ChangeLog 212 RMD160 e4939d29b39fa6dcd35966168a0f47e8ff048c2c SHA1 0f1c8bca9409f286c88e77b48f8a9525033fa941 SHA256 f34bb2eeb275a1c457728f0e54dd163a7b506139fb6193e428eeea4e2cf69a0c
+EBUILD wolman-9999.ebuild 756 RMD160 1928ee41c6d6c55f32ad30c656bff30f68d07be5 SHA1 52c1b6e4539296d9d5028d8cb660af126bb3ada9 SHA256 da157e1f64ba41eea1d6907347daa6c941619ba184298fa6c6ada1ecec9a7cf6
+MISC ChangeLog 357 RMD160 7b4e93e91f17fea4acf5c06d470c4d8fbf071053 SHA1 a711bbdffdc452d7dbc30a123f5881a208cdba90 SHA256 744d06663447eff435e1b777e75aacd488a8c3891168e35f777153f19f05bddc
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
