@@ -1,6 +1,9 @@
 # ChangeLog for net-misc/wolman
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  20 Apr 2009; Christian Ruppert <idl0r@gentoo.org> wolman-9999.ebuild:
+  Live ebuilds shouldn't have KEYWORDS. Removed x11-libs/qt dependency.
 
   16 Mar 2008; Jakub Moc <jakub@gentoo.org> +metadata.xml,
   +wolman-9999.ebuild:
